--- a/sample-01/public/index.html
+++ b/sample-01/public/index.html
@@ -33,8 +33,10 @@
       rel="stylesheet"
       href="https://cdn.auth0.com/js/auth0-samples-theme/1.0/css/auth0-theme.min.css"
     />
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 
-    <title>Calling an API</title>
+
+    <title>COVID GAMES</title>
   </head>
   <body class="h-100">
     <noscript>You need to enable JavaScript to run this app.</noscript>
